<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <Button
            android:id="@+id/bookButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/booking_button"
            android:text="@string/book"
            android:textStyle="bold"
            android:textSize="@dimen/h4"/>

        <Button
            android:id="@+id/upcomingButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/upcoming_button"
            android:text="@string/upcoming"
            android:textStyle="bold"
            android:textSize="@dimen/h4"/>

        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/feedback_button"
            android:text="@string/feedback"
            android:textStyle="bold"
            android:textSize="@dimen/h4"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>